@startuml classDiagramPolymoprhism 

class CargoShip {
    - cargoCapacityInTonnage : int

    + CargoShip(shipName : String, shipBuiltYear : String, cargoCapacityTonnage : int)
    + setcargoCapacityInTonnage(cargoCapacityTonnage : int) : void
    + getcargoCapacityInTonnage() : int
    + printShip() : void 
    + toString() : String
}

class CruiseShip {
    - maxNumberPassengers : int 

    + CruiseShip(shipName : String, shipBuiltYear : String, maximumPassengers : int)
    + setMaxNumberPassengers(maxNumberPassengers : int) : void
    + getMaxNumberPassengers() : int
    + printShip() : void 
    + toString() : String
}

class Ship {
    - shipName : String
    - yearBuilt : String

    + Ship(shipName : String, shipBuiltYear : String)
    + getshipName() : String
    + getYearBuilt() : String
    + setShipName(shipName : String) : void
    + setYearBuilt(yearBuilt : String) : void 
    + printShip() : void
    + toString() : String
}

class PolymorphismDriver {

}

Ship <|-- CargoShip
Ship <|-- CruiseShip
@enduml